--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "bower": "1.6.5",
+    "cluster-store": "1.0.1",
     "compression": "1.6.0",
-    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "1.12.1",
     "file-stream-rotator": "0.0.6",
     "foreman": "1.4.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "node-uuid": "1.4.7",
-    "pm2": "0.15.10",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
