--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "bower": "1.6.5",
+    "bower": "1.6.8",
     "cluster-store": "1.0.1",
     "compression": "1.6.0",
     "debug": "~2.2.0",
@@ -18,7 +18,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "node-uuid": "1.4.7",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "winston": "2.1.1"
   },
   "devDependencies": {
     "eslint": "1.9.0",
