--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "Schedule",
-  "version": "0.0.0",
+  "name": "NodeServer",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node bin/www"
+    "start": "node bin/www",
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "bower": "1.6.8",
     "cluster-store": "1.0.1",
     "compression": "1.6.0",
     "debug": "~2.2.0",
@@ -22,9 +22,13 @@
     "winston": "2.1.1"
   },
   "devDependencies": {
+    "chai": "3.4.1",
     "eslint": "1.9.0",
     "eslint-config-airbnb": "1.0.0",
     "eslint-plugin-react": "3.9.0",
-    "nodemon": "1.8.1"
+    "mocha": "2.3.4",
+    "nodemon": "1.8.1",
+    "sinon": "1.17.2",
+    "supertest": "1.1.0"
   }
 }
