--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "node-uuid": "1.4.7",
+    "pg": "4.4.4",
+    "pg-format": "1.0.1",
     "serve-favicon": "~2.3.0",
     "winston": "2.1.1"
   },
