--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-stream-rotator": "0.0.6",
     "foreman": "1.4.1",
     "jade": "~1.11.0",
+    "jws": "3.1.1",
     "morgan": "~1.6.1",
     "node-uuid": "1.4.7",
     "pg": "4.4.4",
