Adding calendar template to project

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ config/ssl/
 config/cookieSecret.txt
 config/dbconfig.js
 
+# Bower
+bower_components
 
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
