--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "start": "node --harmony bin/www",
+    "test": "mocha --reporter spec"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -24,6 +24,7 @@
     "pg": "4.4.4",
     "pg-format": "1.0.1",
     "serve-favicon": "~2.3.0",
+    "sql": "0.67.0",
     "winston": "2.1.1"
   },
   "devDependencies": {
@@ -32,7 +33,6 @@
     "eslint-config-airbnb": "1.0.0",
     "eslint-plugin-react": "3.9.0",
     "mocha": "2.3.4",
-    "nodemon": "1.8.1",
     "sinon": "1.17.2",
     "supertest": "1.1.0"
   }
