--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Schedule",
+  "name": "schedule",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node --harmony bin/www",
+    "start": "nodemon --harmony bin/www",
     "test": "mocha --reporter spec"
   },
   "dependencies": {
@@ -35,5 +35,21 @@
     "mocha": "2.3.4",
     "sinon": "1.17.2",
     "supertest": "1.1.0"
-  }
+  },
+  "description": "A multi-threaded Node scheduling application for employees with variable shift lengths.",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arikalfus/Schedule.git"
+  },
+  "author": "Ari Kalfus",
+  "email": "arikalfus@gmail.com",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/arikalfus/Schedule/issues"
+  },
+  "homepage": "https://github.com/arikalfus/Schedule#readme"
 }
