Adding sub request form

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "foreman": "1.4.1",
     "jade": "~1.11.0",
     "jws": "3.1.1",
+    "moment": "2.11.2",
     "morgan": "~1.6.1",
     "node-uuid": "1.4.7",
     "passport": "0.3.2",
