--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "1.13.0",
+    "express-validator": "2.20.3",
     "file-stream-rotator": "0.0.6",
     "foreman": "1.4.1",
+    "helmet": "1.3.0",
     "jade": "~1.11.0",
     "jws": "3.1.1",
     "moment": "2.11.2",
     "morgan": "~1.6.1",
     "node-uuid": "1.4.7",
+    "nodemon": "1.9.1",
     "passport": "0.3.2",
     "passport-saml": "0.15.0",
     "pg": "4.4.4",
