--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "compression": "1.6.0",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-content-length-validator": "1.0.0",
     "express-session": "1.13.0",
     "express-validator": "2.20.3",
     "file-stream-rotator": "0.0.6",
     "foreman": "1.4.1",
     "helmet": "1.3.0",
+    "hpp": "0.2.1",
     "jade": "~1.11.0",
     "jws": "3.1.1",
     "moment": "2.11.2",
