--- a/package.json
+++ b/package.json
@@ -7,40 +7,41 @@
     "test": "mocha --reporter spec"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.15.0",
     "cluster-store": "^1.0.2",
     "compression": "^1.6.1",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "express-content-length-validator": "~1.0.0",
-    "express-session": "~1.13.0",
-    "express-validator": "~2.20.3",
-    "file-stream-rotator": "~0.0.6",
-    "foreman": "~1.4.1",
-    "helmet": "~1.3.0",
-    "hpp": "~0.2.1",
-    "jade": "~1.11.0",
+    "debug": "^2.2.0",
+    "express": "^4.13.1",
+    "express-content-length-validator": "^1.0.0",
+    "express-session": "^1.13.0",
+    "express-validator": "^2.20.3",
+    "file-stream-rotator": "^0.0.6",
+    "foreman": "^1.4.1",
+    "helmet": "^1.3.0",
+    "hpp": "^0.2.1",
+    "jade": "^1.11.0",
     "jws": "^3.1.3",
-    "moment": "~2.11.2",
-    "morgan": "~1.6.1",
-    "node-uuid": "~1.4.7",
-    "nodemon": "~1.9.1",
-    "passport": "~0.3.2",
-    "passport-saml": "~0.15.0",
-    "pg": "^4.4.6",
+    "moment": "^2.11.2",
+    "morgan": "^1.7.0",
+    "node-uuid": "^1.4.7",
+    "nodemon": "^1.9.1",
+    "passport": "^0.3.2",
+    "passport-saml": "^0.15.0",
+    "pg": "^4.5.3",
     "pg-format": "^1.0.2",
-    "serve-favicon": "~2.3.0",
-    "sql": "~0.67.0",
-    "winston": "~2.1.1"
+    "serve-favicon": "^2.3.0",
+    "sql": "^0.67.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
-    "chai": "~3.4.1",
-    "eslint": "~1.9.0",
-    "eslint-config-airbnb": "~1.0.2",
-    "eslint-plugin-react": "~3.9.0",
-    "mocha": "~2.3.4",
-    "sinon": "~1.17.3",
-    "supertest": "~1.1.0"
+    "chai": "^3.5.0",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^4.3.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3",
+    "supertest": "^1.2.0"
   },
   "description": "A multi-threaded Node scheduling application for employees with variable shift lengths.",
   "main": "app.js",
