--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "foreman": "^1.4.1",
     "helmet": "^1.3.0",
     "hpp": "^0.2.1",
-    "jade": "^1.11.0",
     "jws": "^3.1.3",
     "moment": "^2.11.2",
     "morgan": "^1.7.0",
@@ -28,6 +27,7 @@
     "passport": "^0.3.2",
     "passport-saml": "^0.15.0",
     "pg": "^4.5.3",
+    "pug": "^2.0.0-alpha8",
     "serve-favicon": "^2.3.0",
     "winston": "^2.2.0"
   },
