--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,3 +7,5 @@ ratings:
   paths:
   - "**.js"
 exclude_paths: []
+- "public/javascripts/bootstrap-timepicker.js"
+- "public/javascripts/bootstrap-timepicker.min.js"
