--- a/package.json
+++ b/package.json
@@ -4,42 +4,44 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "mocha --reporter spec"
+    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- $(CLI_MOCHA) --recursive -R spec $(path)",
+    "report": "see ./coverage/lcov-report/index.html",
+    "delint": "./node_modules/eslint/bin/eslint.js config/ public/javascripts/ routes/ services/ test/ app.js;",
+    "clean": "rm -rf ./node_modules/; rm -rf ./coverage/;",
+    "submit": "npm run clean; npm install; npm run delint; npm run test;"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "cluster-store": "^1.0.3",
-    "compression": "^1.6.1",
+    "compression": "^1.6.2",
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-content-length-validator": "^1.0.0",
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
-    "file-stream-rotator": "^0.0.6",
-    "foreman": "^1.4.1",
-    "helmet": "^1.3.0",
+    "file-stream-rotator": "0.0.7",
+    "helmet": "^2.1.2",
     "hpp": "^0.2.1",
-    "jws": "^3.1.3",
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
+    "nocache": "^1.0.1",
     "node-uuid": "^1.4.7",
-    "nodemon": "^1.10.0",
     "passport": "^0.3.2",
     "passport-saml": "^0.15.0",
-    "pg": "^4.5.6",
-    "pug": "^2.0.0-beta4",
+    "pg": "^6.1.0",
+    "pug": "^2.0.0-beta5",
     "serve-favicon": "^2.3.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^4.3.0",
-    "mocha": "^2.4.5",
-    "sinon": "^1.17.5",
-    "supertest": "^1.2.0"
+    "eslint": "^3.3.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.0",
+    "istanbul": "^0.4.4",
+    "mocha": "^3.0.2",
+    "pug-lint": "^2.3.0",
+    "supertest": "^2.0.0"
   },
   "description": "A multi-threaded Node scheduling application for employees with variable shift lengths.",
   "main": "app.js",
