--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
     "nocache": "^1.0.1",
-    "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-saml": "^0.15.0",
     "pg": "^6.1.0",
     "pug": "^2.0.0-beta5",
     "serve-favicon": "^2.3.0",
+    "uuid": "^2.0.2",
     "winston": "^2.2.0"
   },
   "devDependencies": {
