--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-content-length-validator": "^1.0.0",
-    "express-session": "^1.14.0",
+    "express-session": "^1.14.1",
     "express-validator": "^2.20.8",
     "file-stream-rotator": "0.0.7",
     "helmet": "^2.1.2",
@@ -25,7 +25,7 @@
     "morgan": "^1.7.0",
     "nocache": "^1.0.1",
     "passport": "^0.3.2",
-    "passport-saml": "^0.15.0",
+    "passport-saml-encrypted": "^0.1.7",
     "pg": "^6.1.0",
     "pug": "^2.0.0-beta5",
     "serve-favicon": "^2.3.0",
@@ -33,12 +33,12 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "eslint": "^3.3.0",
+    "eslint": "^3.3.1",
     "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.0",
-    "istanbul": "^0.4.4",
+    "eslint-plugin-react": "^6.1.2",
+    "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "supertest": "^2.0.0"
   },
