--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,11 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-timepicker": "^0.5.2"
+    "bootstrap-timepicker": "^0.5.2",
+    "fullcalendar": "^2.9.1",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.0",
+    "bootstrap-datepicker": "^1.6.4",
+    "moment": "^2.14.1"
   }
 }
