--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-content-length-validator": "^1.0.0",
+    "express-less": "^0.1.0",
     "express-session": "^1.14.1",
     "express-validator": "^2.20.8",
     "file-stream-rotator": "0.0.7",
