--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "morgan": "^1.7.0",
     "nocache": "^1.0.1",
     "passport": "^0.3.2",
-    "passport-saml-encrypted": "^0.1.7",
+    "passport-saml": "^0.15.0",
     "pg": "^6.1.0",
     "pug": "^2.0.0-beta5",
     "serve-favicon": "^2.3.0",
