--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "engines": {
-    "node": "6.x.x"
+    "node": "6.x"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
