--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "snyk test && ./node_modules/.bin/mocha --reporter spec"
   },
   "engines": {
     "node": "6.x"
@@ -29,6 +29,7 @@
     "pug": "^2.0.0-beta5",
     "serve-favicon": "^2.3.0",
     "uuid": "^2.0.2",
+    "validator": "5.6.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
@@ -39,7 +40,8 @@
     "eslint-plugin-react": "^6.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "snyk": "^1.19.1"
   },
   "description": "A multi-threaded Node scheduling application for employees with variable shift lengths.",
   "main": "app.js",
