--- a/package.json
+++ b/package.json
@@ -10,38 +10,38 @@
     "node": "6.x"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "compression": "^1.6.2",
-    "debug": "^2.2.0",
-    "express": "^4.14.0",
-    "express-content-length-validator": "^1.0.0",
-    "express-session": "^1.14.1",
-    "express-validator": "^2.20.8",
+    "body-parser": "1.15.2",
+    "compression": "1.6.2",
+    "debug": "2.2.0",
+    "express": "4.14.0",
+    "express-content-length-validator": "1.0.0",
+    "express-session": "1.14.1",
+    "express-validator": "2.20.8",
     "file-stream-rotator": "0.0.7",
-    "helmet": "^2.1.2",
-    "hpp": "^0.2.1",
-    "moment": "^2.14.1",
-    "morgan": "^1.7.0",
-    "nocache": "^1.0.1",
-    "passport": "^0.3.2",
-    "passport-saml": "^0.15.0",
-    "pg": "^6.1.0",
-    "pug": "^2.0.0-beta5",
-    "serve-favicon": "^2.3.0",
-    "uuid": "^2.0.2",
+    "helmet": "2.1.2",
+    "hpp": "0.2.1",
+    "moment": "2.14.1",
+    "morgan": "1.7.0",
+    "nocache": "1.0.1",
+    "passport": "0.3.2",
+    "passport-saml": "0.15.0",
+    "pg": "6.1.0",
+    "pug": "2.0.0-beta6",
+    "serve-favicon": "2.3.0",
+    "uuid": "2.0.2",
     "validator": "5.6.0",
-    "winston": "^2.2.0"
+    "winston": "2.2.0"
   },
   "devDependencies": {
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.2",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.0.2",
-    "supertest": "^2.0.0",
-    "snyk": "^1.19.1"
+    "eslint": "3.4.0",
+    "eslint-config-airbnb": "10.0.1",
+    "eslint-plugin-import": "1.14.0",
+    "eslint-plugin-jsx-a11y": "2.2.1",
+    "eslint-plugin-react": "6.2.0",
+    "istanbul": "0.4.5",
+    "mocha": "3.0.2",
+    "snyk": "1.19.1",
+    "supertest": "2.0.0"
   },
   "description": "A multi-threaded Node scheduling application for employees with variable shift lengths.",
   "main": "app.js",
