--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-stream-rotator": "0.0.7",
     "helmet": "2.1.2",
     "hpp": "0.2.1",
+    "lodash": "4.15.0",
     "moment": "2.14.1",
     "morgan": "1.7.0",
     "nocache": "1.0.1",
