Refactored queries with node-sql constructions

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "6.1.0",
     "pug": "2.0.0-beta6",
     "serve-favicon": "2.3.0",
+    "sql": "0.71.0",
     "uuid": "2.0.2",
     "validator": "5.6.0",
     "winston": "2.2.0"
