--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -13,6 +13,7 @@ exclude_paths:
 - "public/javascripts/bootstrap-timepicker.js"
 - "public/javascripts/bootstrap-timepicker.min.js"
 - "public/javascripts/bootstrap-datepicker.js"
+- "public/javascripts/bootstrap-datepicker.min.js"
 - "public/javascripts/bootstrap.min.js"
 - "public/javascripts/fullcalendar.min.js"
 - "public/javascripts/jquery.min.js"
