--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,8 +2,9 @@ engines:
   eslint:
     enabled: true
     channel: "eslint-2"
-    exclude_fingerprints:
-    - 27bf3248f5eefa5baf8241a39dc79729
+    checks:
+      import/no-unresolved:
+        enabled: false
   fixme:
     enabled: true
 ratings:
