--- a/package.json
+++ b/package.json
@@ -10,41 +10,41 @@
     "node": "6.x"
   },
   "dependencies": {
-    "async": "^2.1.2",
-    "body-parser": "^1.15.2",
-    "compression": "^1.6.2",
-    "debug": "^2.2.0",
-    "express": "^4.14.0",
-    "express-session": "^1.14.1",
-    "express-validator": "^2.21.0",
-    "file-stream-rotator": "^0.0.7",
-    "helmet": "^2.3.0",
-    "lodash": "^4.16.4",
-    "moment": "^2.15.2",
-    "morgan": "^1.7.0",
-    "nocache": "^1.0.1",
-    "passport": "^0.3.2",
-    "passport-saml": "^0.15.0",
-    "pg": "^6.1.0",
-    "pug": "^2.0.0-beta6",
-    "raven": "^0.12.1",
-    "serve-favicon": "^2.3.0",
-    "sql": "^0.72.0",
-    "twix": "^1.1.1",
-    "uuid": "^2.0.3",
-    "validator": "^6.1.0",
-    "winston": "^2.2.0"
+    "async": "2.1.2",
+    "body-parser": "1.15.2",
+    "compression": "1.6.2",
+    "debug": "2.3.2",
+    "express": "4.14.0",
+    "express-session": "1.14.2",
+    "express-validator": "2.21.0",
+    "file-stream-rotator": "0.0.7",
+    "helmet": "3.1.0",
+    "lodash": "4.16.6",
+    "moment": "2.16.0",
+    "morgan": "1.7.0",
+    "nocache": "2.0.0",
+    "passport": "0.3.2",
+    "passport-saml": "0.15.0",
+    "pg": "6.1.0",
+    "pug": "2.0.0-beta6",
+    "raven": "0.12.1",
+    "serve-favicon": "2.3.0",
+    "sql": "0.72.0",
+    "twix": "1.1.1",
+    "uuid": "2.0.3",
+    "validator": "6.1.0",
+    "winston": "2.3.0"
   },
   "devDependencies": {
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.1.2",
-    "snyk": "^1.19.1",
-    "supertest": "^2.0.1"
+    "eslint": "3.10.0",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.6.0",
+    "istanbul": "0.4.5",
+    "mocha": "3.1.2",
+    "snyk": "1.19.1",
+    "supertest": "2.0.1"
   },
   "description": "A Node scheduling application for employees with variable shift lengths.",
   "main": "app.js",
