--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "uuid": "3.0.1",
     "validator": "7.0.0",
     "winston": "2.3.1",
-    "snyk": "^1.30.1"
+    "snyk": "1.30.1"
   },
   "devDependencies": {
     "eslint": "3.18.0",
